update method deprecated